channel: add Image.gz-dtb to arm
Change-Id: I5ab214bbb5a3345231b8c861ca35fcc2186c266f

--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -356,7 +356,7 @@ endif
 zImage-dtb: vmlinux scripts dtbs
 	$(Q)$(MAKE) $(build)=$(boot) MACHINE=$(MACHINE) DTSSUBDIR=$(DTSSUBDIR) $(boot)/$@
 
-Image-dtb: vmlinux scripts dtbs
+Image-dtb Image.gz-dtb: vmlinux scripts dtbs
 	$(Q)$(MAKE) $(build)=$(boot) MACHINE=$(MACHINE) DTSSUBDIR=$(DTSSUBDIR) $(boot)/$@
 
 
