arch/arm/boot: Add Image.gz-dtb target
Change-Id: If4c383882d1069505e22de80be12fd110c349656

--- a/arch/arm/boot/Makefile
+++ b/arch/arm/boot/Makefile
@@ -77,6 +77,12 @@ $(obj)/zImage-dtb:	$(obj)/zImage $(DTB_OBJS) FORCE
 	$(call if_changed,cat)
 	@echo '  Kernel: $@ is ready'
 
+$(obj)/Image.gz: $(obj)/Image FORCE
+	$(call if_changed,gzip)
+
+$(obj)/Image.gz-dtb: $(obj)/Image.gz $(DTB_OBJS) FORCE
+	$(call if_changed,cat)
+
 endif
 
 ifneq ($(LOADADDR),)
