--- a/arch/arm/configs/channel_defconfig
+++ b/arch/arm/configs/channel_defconfig
@@ -217,7 +217,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SYSTEM_DATA_VERIFICATION=y
+# CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_OPROFILE is not set
@@ -288,15 +288,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-CONFIG_MODULE_SIG_SHA512=y
-CONFIG_MODULE_SIG_HASH="sha512"
+# CONFIG_MODULE_SIG is not set
 # CONFIG_MODULE_COMPRESS is not set
 # CONFIG_TRIM_UNUSED_KSYMS is not set
 # CONFIG_MODULE_EXTRA_COPY is not set
@@ -3791,9 +3783,9 @@ CONFIG_QPNP_COINCELL=y
 CONFIG_QPNP_REVID=y
 # CONFIG_GPIO_USB_DETECT is not set
 CONFIG_USB_BAM=y
+CONFIG_MSM_EXT_DISPLAY=y
 # CONFIG_SEEMP_CORE is not set
 # CONFIG_QCOM_GENI_SE is not set
-# CONFIG_MSM_EXT_DISPLAY is not set
 CONFIG_MSM_RMNET_BAM=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -4273,7 +4265,7 @@ CONFIG_PWM_QTI_LPG=y
 CONFIG_IRQCHIP=y
 CONFIG_ARM_GIC=y
 CONFIG_ARM_GIC_MAX_NR=1
-CONFIG_QCOM_SHOW_RESUME_IRQ=y
+# CONFIG_QCOM_SHOW_RESUME_IRQ is not set
 # CONFIG_QTI_PDC is not set
 # CONFIG_QTI_PDC_SDM845 is not set
 # CONFIG_QTI_PDC_SDM670 is not set
@@ -4318,7 +4310,7 @@ CONFIG_RAS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
-# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_NVMEM is not set
 # CONFIG_STM is not set
