--- a/arch/arm/configs/channel_defconfig
+++ b/arch/arm/configs/channel_defconfig
@@ -1830,10 +1830,24 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_FTS is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_GT9XX_v28 is not set
-# CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
+CONFIG_TOUCHSCREEN_HIMAX_CHIPSET=y
+CONFIG_TOUCHSCREEN_HIMAX_MMI=m
 # CONFIG_TOUCHSCREEN_EKTF3XXX_CHIPSET is not set
-# CONFIG_TOUCHSCREEN_NOVATEK_CHIPSET is not set
+CONFIG_TOUCHSCREEN_NOVATEK_CHIPSET=y
+CONFIG_TOUCHSCREEN_NT36525=m
+CONFIG_TOUCHSCREEN_NT36xxx=m
 CONFIG_INPUT_MISC=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_SPI=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_I2C=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_CORE=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_TOUCH=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_DEVICE=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_TESTING=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_REFLASH=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_RECOVERY=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_ZEROFLASH=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_DIAGNOSTICS=m
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
 # CONFIG_INPUT_BMA150 is not set
