--- a/arch/arm/configs/channel_defconfig
+++ b/arch/arm/configs/channel_defconfig
@@ -4352,7 +4352,7 @@ CONFIG_ANDROID_BINDER_IPC_32BIT=y
 # FPGA Configuration Support
 #
 # CONFIG_FPGA is not set
-# CONFIG_SENSORS is not set
+CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
 
